k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: car-logs
  annotations:
    kustomize.toolkit.fluxcd.io/prune: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: car-app
  annotations:
    kustomize.toolkit.fluxcd.io/prune: "true"
