k8s/fluent-bit.yaml

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluent-bit
  namespace: car-app
  labels:
    app: fluent-bit
  annotations:
    kustomize.toolkit.fluxcd.io/prune: "true"
    kustomize.toolkit.fluxcd.io/disableNameSuffixHash: "true"
spec:
  selector:
    matchLabels:
      app: fluent-bit
  template:
    metadata:
      labels:
        app: fluent-bit
    spec:
      serviceAccountName: fluent-bit-sa
      containers:
        - name: fluent-bit
          image: fluent/fluent-bit:2.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2020
          resources:
            limits:
              memory: 256Mi
              cpu: 200m
            requests:
              memory: 128Mi
              cpu: 100m
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 2020
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 2
          volumeMounts:
            - name: car-app-pvc
              mountPath: /logs/app
              readOnly: true
            - name: car-data-pvc
              mountPath: /logs/data
              readOnly: true
            - name: config
              mountPath: /fluent-bit/etc/
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: fluent-bit-config
        - name: car-app-pvc
          persistentVolumeClaim:
            claimName: car-app-pvc
        - name: car-data-pvc
          persistentVolumeClaim:
            claimName: car-data-pvc
