k8s/chronograf.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chronograf
  namespace: car-logs
  labels:
    app: chronograf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chronograf
  template:
    metadata:
      labels:
        app: chronograf
    spec:
      containers:
        - name: chronograf
          image: chronograf:1.8
          ports:
            - containerPort: 8888
          readinessProbe:
            httpGet:
              path: /
              port: 8888
            initialDelaySeconds: 10
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: 8888
            initialDelaySeconds: 30
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: chronograf
  namespace: car-logs
  labels:
    app: chronograf
spec:
  selector:
    app: chronograf
  ports:
    - port: 80
      targetPort: 8888
      protocol: TCP
---
