k8s/elasticsearch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: car-logs
  labels:
    app: elasticsearch
  annotations:
    kustomize.toolkit.fluxcd.io/prune: "true"
    kustomize.toolkit.fluxcd.io/disableNameSuffixHash: "true"
spec:
  replicas: 1
  serviceName: elasticsearch
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      securityContext:
        runAsUser: 1000    
        fsGroup: 1000        
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:9.0.3
          ports:
            - containerPort: 9200
              name: http
          resources:
            requests:
              memory: "2Gi"
              cpu: "1"
            limits:
              memory: "3Gi"
              cpu: "2"
          volumeMounts:
            - name: elasticsearch-pvc
              mountPath: /usr/share/elasticsearch/data
  volumeClaimTemplates:
    - metadata:
        name: elasticsearch-pvc
        annotations:
          kustomize.toolkit.fluxcd.io/prune: "true"
          kustomize.toolkit.fluxcd.io/disableNameSuffixHash: "true"
      spec:
        storageClassName: standard  
        accessModes: 
          - ReadWriteOnce
        resources:
          requests:
            storage: 3Gi
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: car-logs
  labels:
    app: elasticsearch
  annotations:
    kustomize.toolkit.fluxcd.io/prune: "true"
    kustomize.toolkit.fluxcd.io/disableNameSuffixHash: "true"
spec:
  selector:
    app: elasticsearch
  ports:
    - name: http
      port: 9200
      targetPort: 9200
