k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: car-dashboard
spec:
  selector:
    app: car-dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8050
